# libb

./: .gitignore  AUTHORS  CMakeLists.txt  COPYING  LICENSE  Makefile.am  README  README.md  autoforge.yaml  autogen.sh  b-config.in  b-uninstalled.pc.in  b.pc.in  configure.ac  uninstalled-config.in
cmake/: BConfig.cmake.in  config.h.in
cmake/Modules/: CheckAtomicIncDec.cmake
cmake/modules/: CheckAtomic.cmake
config/: Makefile.am
doc/: Array.doc  Array.doc.en  CustomException.doc  CustomException.doc.en  Doxyfile  Doxyfile.en  Exception.doc  Makefile.am  Memory-Exception.doc  Memory-Exception.doc.en  Memory.doc  Memory.doc.en  Object.doc  Object.doc.en  RefCount.doc  RuntimeException.doc  RuntimeException.doc.en  SystemException.doc  html_footer  html_footer.en  main.css  mkdoc.pl
include/: Makefile.am
include/B/: Array.h  ArrayImpl.h  CompilerFeaturesM.h  CompilerFeaturesW.h  CustomException.h  DoublyLinkedList.h  DoublyLinkedListContainer.h  Exception.h  Heap.h  HeapImpl.h  Helpers.h  Host.h  LevenshteinDistance.h  LinkedList.h  LinkedListContainer.h  Makefile.am  Memory.h  Meta.h  Object.h  Pathname.h  Random.h  Ref.h  RefCount.h  RuntimeException.h  String.h  SystemException.h
include/b/: Makefile.am  access_node.h  arg_list.h  array.h  array_impl.h  array_slice.h  atomic.h  binary_tree.h  cli.h  custom_exception.h  doubly_linked_list.h  doubly_linked_list_container.h  exception.h  facet.h  fn.h  heap.h  heap_impl.h  helpers.h  host.h  input_output_stream.h  input_stream.h  io_streams.h  levenshtein_distance.h  linked_list.h  linked_list_container.h  map.h  memory.h  meta.h  misc.h  node_access_via_cast.h  object.h  opaque.h  option_list.h  output_stream.h  pathname.h  priority_queue.h  pseudorandom.h  random.h  red_black_tree.h  ref.h  (+11 more)
m4/: Makefile.am  ac_cxx_have_stl.m4  ax_atomic.m4  ax_pthread.m4
src/: Exceptions.cpp  Helpers.cpp  Makefile.am  Memory.cpp  Pathname.cpp  String.cpp  StringImpl.h  binary_search_tree.cc  cli.cc  exceptions.cc  exceptions.cpp  fn.cc  helpers.cpp  io_streams.cc  memory.cc  memory.cpp  misc.cc  misc.cpp  object.cc  pathname.cc  pathname.cpp  red_black_tree.cc  string.cc  string.cpp  string_formatting.h  string_impl.h  string_stream.cc  string_view_impl.h  util.cpp
tests/: .gitignore  CMakeLists.txt  Makefile.am  TestArray.cpp  TestHeap.cpp  TestHelpers.cpp  TestLevenshteinDistance.cpp  TestLists.cpp  TestMakePath.cpp  TestMemory.cpp  TestObject.cpp  TestPathname.cpp  TestRandom.cpp  TestString.cpp  arg_list_test.cc  array_slice_test.cc  array_test.cc  atomic_test.cc  binary_search_tree_test.cc  cli_test.cc  exceptions_test.cc  fn_test.cc  heap_test.cc  io_stream_test.cc  levenshtein_distance_test.cc  lists_test.cc  map_test.cc  memory_test.cc  object_test.cc  opaque_test.cc  pathname_test.cc  priority_queue_test.cc  pseudorandom_test.cc  red_black_tree_test.cc  set_test.cc  string_formatting_test.cc  string_stream_test.cc  string_test.cc  string_view_test.cc  test_arg_list.cc  (+41 more)
