# B: Common C++ library
# Copyright (C) 2002-2007, 2016, 2017 Damon Revoe
#
# This library is free software; you can redistribute it and/or
# modify it under the terms of the GNU Lesser General Public
# License as published by the Free Software Foundation; either
# version 2.1 of the License, or (at your option) any later version.
#
# This library is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public
# License along with this library; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
#

LDADD = -L../src -l$(PACKAGE)

TESTS = \
	test_arg_list \
	test_array \
	test_binary_search_tree \
	test_cli \
	test_exceptions \
	test_fn \
	test_heap \
	test_levenshtein_distance \
	test_lists \
	test_map \
	test_memory \
	test_object \
	test_opaque \
	test_pathname \
	test_priority_queue \
	test_pseudorandom \
	test_red_black_tree \
	test_set \
	test_string \
	test_string_formatting \
	test_string_stream \
	test_string_view

check_PROGRAMS = \
	test_arg_list \
	test_array \
	test_binary_search_tree \
	test_cli \
	test_exceptions \
	test_fn \
	test_heap \
	test_levenshtein_distance \
	test_lists \
	test_map \
	test_memory \
	test_object \
	test_opaque \
	test_pathname \
	test_priority_queue \
	test_pseudorandom \
	test_red_black_tree \
	test_set \
	test_string \
	test_string_formatting \
	test_string_stream \
	test_string_view

test_arg_list_SOURCES = test_arg_list.cc

test_array_SOURCES = test_array.cc

test_binary_search_tree_SOURCES = test_binary_search_tree.cc

test_cli_SOURCES = test_cli.cc

test_exceptions_SOURCES = test_exceptions.cc

test_fn_SOURCES = test_fn.cc

test_heap_SOURCES = test_heap.cc

test_levenshtein_distance_SOURCES = test_levenshtein_distance.cc

test_lists_SOURCES = test_lists.cc

test_map_SOURCES = test_map.cc

test_memory_SOURCES = test_memory.cc

test_object_SOURCES = test_object.cc

test_opaque_SOURCES = test_opaque.cc

test_pathname_SOURCES = test_pathname.cc

test_priority_queue_SOURCES = test_priority_queue.cc

test_pseudorandom_SOURCES = test_pseudorandom.cc

test_red_black_tree_SOURCES = test_red_black_tree.cc

test_set_SOURCES = test_set.cc

test_string_SOURCES = test_string.cc

test_string_formatting_SOURCES = test_string_formatting.cc

test_string_stream_SOURCES = test_string_stream.cc

test_string_view_SOURCES = test_string_view.cc

EXTRA_DIST = unit_test.h

MAINTAINERCLEANFILES = Makefile.in
